@@ -5,7 +5,9 @@
     GameDLL. This issue occured in HL2 CTF, SourceForts, or any other mod that relied on
     files from another mod directory.
  - Fixed bug where returning false in Load() after adding a Metamod event listener or
-    hooking a function could cause a crash.
+    hooking a function could cause a crash instead of rejecting the plugin.
+ - Fixed bug where trying to load Metamod:Source a second time as a SourceMM or Valve
+    server plugin could cause a crash.
 
 2006/06/14 1.2.3:
  - Added SourceHook API for manual recalls: RETURN_META_(VALUE_)MNEWPARAMS
